# automated_research_report_generator_v0.1

./: .editorconfig  .gitignore  AGENTS.md  CREW_REFACTOR_WORKING_DRAFT.md  PROJECT_HANDOFF.md  README.md  pyproject.toml  requirements.txt
PROJECT_CONVERSATIONS/: INDEX.md  manifest.json
PROJECT_CONVERSATIONS/transcripts/: 2026-04-01_019d483e-bd20-7430-a195-c7f8ce3a25e3.md  2026-04-01_019d4843-2d30-74e0-bc19-f9abdda15d31.md  2026-04-01_019d485c-4313-70e3-aa75-8198f44c6896.md  2026-04-01_019d486f-83c6-7410-88ea-c581d2bf22a6.md  2026-04-01_019d48c1-1209-7c72-b21b-a7cb0f3c4283.md  2026-04-01_019d48c8-20a8-7be0-8a8f-4347426a1204.md  2026-04-01_019d4911-2e2a-71b0-a423-5ba03a9689a7.md  2026-04-01_019d4916-24dc-77b1-abf4-d9836f13570f.md  2026-04-01_019d4917-4004-7733-adc7-43a2648325b6.md  2026-04-02_019d4c5c-7315-7970-85d3-33294cdb1224.md  2026-04-02_019d4cb9-d56f-7a53-81ff-dca6dbd2754c.md  2026-04-02_019d4e40-384a-7c12-8f93-f39d753b9f5b.md
design_docs/: CREW_REFACTOR_WORKING_DRAFT.md  cryptic-petting-treasure.md  planner重构.md  sequential-rolling-matsumoto.md  snuggly-strolling-meadow.md  工作底稿目录指引.xlsx  项目信息传递链路全面分析.md
scripts/: export_codex_project_conversations.py  generate_registry_template.py
test_src/: conftest.py  test_flow_pdf_indexing.py  test_investment_snapshot_ppt_tool.py  test_live_testing_harness.py  test_markdown_to_pdf_tool.py  test_pdf_indexing_parallel.py  test_research_flow_gate.py  test_research_subcrew_configs.py  test_runtime_cache_cleanup.py  test_text_file_encoding.py  test_tushare_tools.py  test_v2_registry.py  test_v2_tools.py
(+101 files in other folders)
